--- a/app/src/main/res/menu/menu_frag_titulos_cab.xml
+++ b/app/src/main/res/menu/menu_frag_titulos_cab.xml
@@ -4,20 +4,29 @@
     <item
         android:id="@+id/action_adicionar_meu_hamba"
         android:title="@string/text_action_adicionar_meu_hamba"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="true"/>
     <item
         android:id="@+id/action_adicionar_meus_fav"
         android:title="@string/text_action_adicionar_meus_fav"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="true"/>
 
     <item
         android:id="@+id/action_share"
         android:title="@string/text_action_share"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="true"/>
     <item
-        android:id="@+id/action_remove"
-        android:title="@string/text_action_excluir"
-        app:showAsAction="never" />
+        android:id="@+id/action_remove_meu_hamba"
+        android:title="@string/text_action_excluir_meu_hamba"
+        app:showAsAction="never"
+        android:visible="false"/>
+    <item
+        android:id="@+id/action_remove_fav"
+        android:title="@string/text_action_excluir_meus_fav"
+        app:showAsAction="never"
+        android:visible="false"/>
 
 
 </menu>
