--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -47,7 +47,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fillViewport="true">
 
             <me.relex.circleindicator.CircleIndicator
@@ -142,7 +142,7 @@
 
             <TextView
                 android:id="@+id/textViewGeneros"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp"
@@ -160,7 +160,7 @@
                 android:id="@+id/containerbuttontemp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="46dp"
+                android:layout_margin="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewGeneros">
