--- a/app/src/main/res/layout/adapter_butao_temp.xml
+++ b/app/src/main/res/layout/adapter_butao_temp.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    android:layout_height="wrap_content">
 
-        <!-- Botão -->
-        <Button
-            android:id="@+id/button_temporada"
-            android:layout_width="596dp"
-            android:layout_height="68dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="6dp"
-            android:layout_margin="16dp"
-            android:text="@string/button_text_temporada"
-            android:background="@color/colorButoes"
-            android:textColor="@color/colorTextoBut"/>
+    <!-- Botão -->
+    <Button
+        android:id="@+id/button_temporada"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="@string/button_text_temporada"
+        android:background="@color/colorButoes"
+        android:textColor="@color/colorTextoBut"/>
 
-    </FrameLayout>
-
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
