--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -155,18 +155,19 @@
                 app:layout_constraintTop_toBottomOf="@+id/textViewCriadores" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/filme_assistido"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="Não assistido"
-                android:layout_gravity="center_horizontal"
                 android:background="@color/colorButoes"
+                android:text="Não assistido"
                 android:textColor="@color/colorTextoBut"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textViewGeneros" />
@@ -183,7 +184,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button">
+                app:layout_constraintTop_toBottomOf="@+id/filme_assistido">
 
             </FrameLayout>
 
