--- a/app/src/main/res/layout/activity_detalhes.xml
+++ b/app/src/main/res/layout/activity_detalhes.xml
@@ -67,24 +67,55 @@
             <TextView
                 android:id="@+id/textViewSinopse"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="72dp"
                 android:text=""
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/indicator" />
 
-            <RatingBar
-                android:id="@+id/ratingBar"
-                android:layout_width="wrap_content"
+            <ImageButton
+                android:layout_width="40dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="36dp"
-                android:layout_marginRight="36dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:onClick="telaAvaliar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.692"
+                app:layout_constraintStart_toEndOf="@+id/indicator"
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/ic_avaliar_titulo"
+                app:srcCompat="@drawable/ic_star_24dp"/>
+
+            <TextView
+                android:id="@+id/textViewTituloMediaGeral"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="76dp"
+                android:text="@string/text_titulo_media_geral"
+                android:textSize="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <RatingBar
+                android:id="@+id/ratingBarMediaPublicoEmGeral"
+                android:layout_width="25dp"
+                android:layout_height="29dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="248dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="248dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:numStars="1"
                 android:rating="1"
@@ -92,6 +123,7 @@
                 android:scaleY=".5"
                 app:layout_constraintBottom_toTopOf="@+id/textViewSinopse"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textViewTituloMediaGeral"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <TextView
@@ -105,11 +137,12 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:text=""
-                android:textSize="30dp"
+                android:textSize="15dp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/textViewSinopse"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ratingBar"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/ratingBarMediaPublicoEmGeral"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
             <TextView
@@ -120,9 +153,9 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
-                android:textStyle="bold|italic"
                 android:textSize="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/textViewSinopse"
+                android:textStyle="bold|italic"
+                app:layout_constraintBottom_toTopOf="@+id/textViewTituloMediaGeral"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
