--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#e86d3f</color>
     <color name="colorPrimaryDark">#e15e36</color>
     <color name="colorAccent">#ec7e4f</color>
@@ -16,9 +16,6 @@
     <!-- SwipeRefreshLayout -->
     <color name="colorRefreshProgress">#33B5E5</color>
     <color name="colorTransparent">#0000</color>
-
-
-
-
+    <color name="background_material_dark" tools:override="true">#ffffff</color>
 
 </resources>
